<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

      <TextView
          android:id="@+id/textView10"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/assignment1"
          android:textAlignment="center" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:orientation="horizontal">

         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/boardborder"
             android:text="@string/textview1"
             android:textAlignment="center" />


         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/boardborder"
             android:text="@string/textview2"
             android:textAlignment="center" />

         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/boardborder"
             android:text="@string/textview3"
             android:textAlignment="center" />

         <TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/boardborder"
             android:text="@string/textview4"
             android:textAlignment="center" />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

         <ListView
             android:id="@+id/listView1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
            />

         <ListView
             android:id="@+id/listView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             />

         <ListView
             android:id="@+id/listView3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             />

         <ListView
             android:id="@+id/listView4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             />
      </LinearLayout>

   </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
